config/k3s/02-http-ingress-k3s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jsc-ingress
  namespace: jsc-ns
spec:
  ingressClassName: nginx
  rules:
  - host: "dev.gawin.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sawan
            port:
              number: 80
