config/k3s/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: jsc-ns
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - narok.io
        - gawin.io
        - sawan.io
        - rochefolle.org
        - rochefolle.net
      secretName: jsc-home-certificate
  rules:
    - host: "narok.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: narok-wp-svc
                port:
                  number: 3000
    - host: "www.narok.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: narok-wp-svc
                port:
                  number: 3000
    - host: "gpt.narok.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: narok-gpt-svc
                port:
                  number: 3001
    - host: "llm.narok.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: narok-gpt-svc
                port:
                  number: 3001
    - host: "n8n.narok.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: n8n-svc
                port:
                  number: 5678
    - host: "sawan.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sawan-svc
                port:
                  number: 3000
    - host: "www.sawan.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sawan-svc
                port:
                  number: 3000
    - host: gawin.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: k3s-dashboard-svc-client
                port:
                  number: 80
    - host: api.gawin.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: k3s-dashboard-svc-server
                port:
                  number: 3000
    - host: rochefolle.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jsc-gs-app-svc
                port:
                  number: 8888
    - host: www.rochefolle.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jsc-gs-app-svc
                port:
                  number: 8888
    - host: rochefolle.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: rochefolle-svc
                port:
                  number: 3000
    - host: www.rochefolle.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: rochefolle-svc
                port:
                  number: 3000
    - host: mumu.rochefolle.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jsc-mu-game-svc
                port:
                  number: 8889
