config/k3s/05-https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
  name: jsc-ingress
  namespace: jsc-ns
spec:
  tls:
    - hosts:
      - dev.gawin.io
      secretName: jsc-home-certificate
  ingressClassName: nginx
  rules:
  - host: dev.gawin.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sawan
            port:
              number: 80
